恢复之前写的博客

--- a/src/content/blog/逆向工程核心原理笔记.md
+++ b/src/content/blog/逆向工程核心原理笔记.md
@@ -9,7 +9,8 @@ draft: false
 tags:
   - reverse
   - windows
-description: 逆向入门
+  - notes
+description: 逆向入门笔记
 ---
 
 # **关于逆向工程：**
@@ -70,7 +71,7 @@ Alt + M 打开映射窗口（view-memory）
 
 .dll：
 
-动态链接库英文为***DLL***，是**Dynamic Link Library**的缩写。DLL是一个包含可由多个程序，同时使用的代码和数据的库。
+动态链接库英文为**_DLL_**，是**Dynamic Link Library**的缩写。DLL是一个包含可由多个程序，同时使用的代码和数据的库。
 
 4.修改字符串的两种方法：
 
